# voice_gate

./: .gitignore  INSTALL.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_NOTES.md  UI_IMPROVEMENTS.md  app.py  cleanup_audio_duplicates.py  cleanup_duplicates.py  main.py  pyproject.toml  streamlit_audio_demo.py  test_structure.py  voice_db.pkl
tests/: test_audio_processor.py  test_database.py  test_end_to_end.py  test_verifier.py
voice_gate/: __init__.py  audio_processor.py  config.py  database.py  ui_styles.py  verifier.py
voice_gate/ui/: __init__.py  database_page.py  enrollment_page.py  sidebar.py  verification_page.py
