[project]
name = "voice-gate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0,<2.0",
    "resemblyzer>=0.1.4",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "streamlit>=1.50.0",
    "streamlit-webrtc>=0.63.11",
]
